# EffectiveCpp-Practice

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Item2/: CMakeLists.txt
Item2/src/1_MACRO_EXORCISM_Refactor/1.1/: GpuConfig.h  main.cpp
Items/: CMakeLists.txt
Items/2/1_MACRO_EXORCISM_Refactor/src/1.2/: main.cpp
Items/2/2_BROKEN_SQR_MACRO_Refactor/src/2.1/: main.cpp
Items/2/2_BROKEN_SQR_MACRO_Refactor/src/2.2/: main.cpp
Items/2/3_RENDER_FLAGS_ENUM_Refactor/src/3.1/: main.cpp
Items/2/4_DOT_MACRO_TO_INLINE_Refactor/src/4.1/: main.cpp
Items/2/5_GPULIMITS_HEADER/src/5.1/: GpuLimits.h  main.cpp
