# Item2/CMakeLists.txt

# Exercise 1.1 – MACRO EXORCISM (Refactor)
add_executable(item2_1_1_macro_exorcism
    src/1_MACRO_EXORCISM_Refactor/1_1/main.cpp
)

# Later:
# add_executable(item2_1_2_macro_exorcism
#     src/1_MACRO_EXORCISM_Refactor/1_2/main.cpp
# )
#
# add_executable(item2_2_1_whatever
#     src/2_SOMETHING_ELSE/2_1/main.cpp
# )
